# Road-detection

./: README.md  ТЗ.md
QML_and_C++/: CMakeLists.txt
QML_and_C++/src/: main.cpp  videoitem.h
qml/: Main.qml
src/: videobackend.cpp  videobackend.h
